New see commons friends service, new error handler when 2 emails are the same